intel/bench_214_new/extr_.reactosdll3rdpartylibxsltxsltlocale.c_xsltDefaultRegion_with_main/log.txt
bench_214_new/extr_.reactosdll3rdpartylibxsltxsltlocale.c_xsltDefaultRegion_with_main/extr_.reactosdll3rdpartylibxsltxsltlocale.c_xsltDefaultRegion_with_main.c:19:26: error: use of undeclared identifier 'NULL'
    const char *region = NULL;
                         ^
1 error generated.
HLS FPGA Parse FAILED.
